--- a/style/style.css
+++ b/style/style.css
@@ -72,3 +72,15 @@ footer .contact .contact-qq{
     background-color: #fff;
 }
 .list ul{padding-left:0}
+.list .listTitle{
+	padding-bottom: 0.75em;
+	font-size: 22px;
+	font-weight: 700;
+	color: #333;
+	border-bottom: 1px solid #ccc;
+}
+.list .listTitle span{
+	font-size: 12px;
+	font-weight: 100;
+	color: #999;
+}
