--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,7 @@
 body{
 	padding-top:70px;
 	font-family:"Microsoft YaHei","Helvetica Neue",Helvetica,Arial,sans-serif;
-	background-color:#f8f8f8;
+	background-color:#FDFDFD;
     color:#555;
 }
 a:hover,
@@ -68,10 +68,13 @@ footer .contact .contact-qq{
 }
 .list{
     margin-top: -90px;
-    padding:1em 6em 5em;
-    background-color: #fff;
+    padding:1em 6em 2em;
+    background-color:#FDFDFD;
 }
-.list ul{padding-left:0}
+.list ul{
+	padding-left:0;
+	list-style-type: none;
+}
 .list .listTitle{
 	padding-bottom: 0.75em;
 	font-size: 22px;
@@ -86,4 +89,23 @@ footer .contact .contact-qq{
 }
 .floatRight{
 	float: right;
+}
+.breadcrumb{margin-bottom:0}
+.listLi{
+	border-bottom:1px solid #e1e1e8;
+}
+.listLi p{margin:0}
+.listLi:hover{
+	background-color: #f7f7f9;
+	border: 1px solid #e1e1e8;
+}
+.listLi .listName{
+	font-size:16px;
+	padding-left:.5em;
+	line-height:3;
+}
+.listLi .time{
+	font-size:12px;
+	margin-top: 16px;
+	margin-right:.5em;
 }
